Fix YUI menu not showing

--- a/war/src/main/less/base/style.less
+++ b/war/src/main/less/base/style.less
@@ -1016,7 +1016,6 @@ table.fingerprint-in-build td {
   padding-left: 32px;
   transition: var(--standard-transition);
   margin-top: 0.66rem;
-  overflow: hidden;
 
   &::after {
     content: "";
